# 201

./: .gitignore  .gitmodules  README.md  joven_unifying_framework.md  kuramoto_einstein_mapping.md  pyproject.toml  quantum_stribeck.ipynb  renzos_rule_derivation.md
docs/: index.html
sparc_x/: __init__.py  calculator.py  constants.py  kuramoto.py  lyapunov.py  mond.py  profiles.py  stribeck.py  viz.py
sparc_x/tests/: test_calculator.py  test_kuramoto.py  test_mond.py  test_stribeck.py
