[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc-x-api"
version = "0.1.0"
description = "Python API for the Kuramoto-Einstein synchronization framework"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.10"
authors = [
    { name = "N. Joven" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["sparc_x*"]
